src/components/PageUI/PageUI.css
.body__industries {
  background-image: url("../../../public/backgrounds/slide_one.jpg");
  background-color: rgba(0, 0, 0, 0.2);
  background-blend-mode: multiply;
  background-repeat: no-repeat;
  background-size: cover;
  transition: .3s background-image ease-in-out;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  min-height: 100vh;
  padding: 0 15%;
}
.body__services {
  background-image: url("../../../public/backgrounds/slide_two.jpg");
  background-color: rgba(0, 0, 0, 0.2);
  background-blend-mode: multiply;
  background-repeat: no-repeat;
  background-size: cover;
  transition: .3s background-image ease-in-out;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  min-height: 100vh;
  padding: 0 15%;
}
.body__about-us {
  background-image: url("../../../public/backgrounds/slide_three.jpg");
  background-color: rgba(0, 0, 0, 0.2);
  background-blend-mode: multiply;
  background-repeat: no-repeat;
  background-size: cover;
  transition: .3s background-image ease-in-out;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  min-height: 100vh;
  padding: 0 15%;
}



.main__section {
  color: white;
  margin-bottom: 5rem;
  margin-left: .25rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.main__headline {
  font-size: 4rem;
  margin-right: 3rem;
}
.main__subhead {
  line-height: 1.5rem;
  font-size: 1rem;
}
@media (max-width: 950px) {
  .main__headline {
    margin-top: 3rem;
  }
}
@media (max-width: 800px) {
  .main__section {
    flex-direction: column;
    align-items: flex-start;
  }
  .main__headline {
    margin-bottom: 4rem;
    margin-right: 0;
  }
}




.footer__section {
  background-color: white;
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding: 3rem 3rem;
  width: 100%;
  transition: .3s all ease-in-out;
}
.footer__cta {
  cursor: pointer;
  display: flex;
  align-items: center;
  transition: .3s all ease-out;
}
.footer__cta:hover {
  transform: scale(1.02);
}
.footer__subhead {
  font-size: .9rem;
  font-weight: 600;
  margin-right: .75rem;
}
.footer__icon {
  color: #ffc004;
}
@media (max-width: 965px) {
  .footer__section {
    flex-direction: column;
    justify-content: space-evenly;
  }
  .footer__cta {
    margin-top: 1rem;
  }
}

